# rothko

./: .clang-format  .gitignore  .gitmodules  .gn  .ycm_extra_conf.py  BUILD.gn  LICENSE  Makefile  README.md  TODO.md  build.bat
examples/: BUILD.gn  sdl_opengl.cc  sdl_plain_window.cc
examples/cube/: BUILD.gn  gui.cc  gui.h  main.cc  shader.cc  shader.frag  shader.h  shader.vert
examples/emulator/: BUILD.gn  audio.cc  audio.h  catridge.cc  catridge.h  cpu.cc  cpu.h  cpu_instructions.cc  cpu_instructions.h  cpu_operations.cc  cpu_operations.h  disassembler.cc  disassembler.h  display.cc  display.h  gameboy.cc  gameboy.h  main.cc  memory.cc  memory.h  memory_bank_controllers.cc  memory_bank_controllers.h  quad.cc  quad.h  shader.cc  shader.h  tests.cc  textures.cc  textures.h  zelda.dump.DMP
examples/gltf/: BUILD.gn  deserialize_scene.cc  gltf2rothko.cc  loader.cc  loader.h  main.cc  scene.cc  scene.h  serialize_scene.cc  shaders.cc  shaders.h
examples/ozz/: BUILD.gn  main.cc
examples/scene_graph/: BUILD.gn  main.cc
examples/simple_lighting/: BUILD.gn  main.cc  shaders.cc  shaders.h
examples/tetris/: BUILD.gn  LOG.md  README.md  main.cc  tetris.cc  tetris.h
examples/textured_lighting/: BUILD.gn  main.cc  shaders.cc  shaders.h
extras/: line_count.py  ycm_definitions.h
gn_config/: example_args.gn  example_ycm_extra_conf_local.py  main_config.gn
gn_config/compilers/: BUILD.gn
gn_config/toolchains/: BUILD.gn  msvc_stamp.py
licenses/: ozz.license
rothko/: BUILD.gn  game.cc  game.h
rothko/containers/: BUILD.gn  vector.h
rothko/graphics/: BUILD.gn  README.md  color.cc  color.h  commands.cc  commands.h  definitions.h  graphics.h  material.h  mesh.cc  mesh.h  model.h  renderer.h  shader.cc  shader.h  texture.cc  texture.h  vertices.cc  vertices.h
rothko/graphics/common/: BUILD.gn  color.cc  color.h  mesh.cc  mesh.h  render_commands.cc  render_commands.h  renderer.cc  renderer.h  renderer_backend.h  shader.cc  shader.h  texture.cc  texture.h
rothko/graphics/default_shaders/: BUILD.gn  default_shaders.cc  default_shaders.h
rothko/graphics/opengl/: BUILD.gn  execute_commands.cc  execute_commands.h  mesh.cc  mesh.h  renderer_backend.cc  renderer_backend.h  shader.cc  shader.h  texture.cc  texture.h  utils.cc  utils.h
rothko/input/: BUILD.gn  input.cc  input.h
rothko/logging/: BUILD.gn  logging.cc  logging.h  timer.h
rothko/math/: BUILD.gn  hash.h  math.cc  math.h  vec.cc  vec.h
rothko/memory/: BUILD.gn  block_allocator.cc  block_allocator.h  memory_block.cc  memory_block.h  stack_allocator.cc  stack_allocator.h
rothko/models/: BUILD.gn  cube.cc  cube.h  model.h
rothko/models/gltf/: BUILD.gn  loader.cc  loader.h
rothko/platform/: BUILD.gn  dialogs.cc  dialogs.h  paths.cc  paths.h  platform.cc  platform.h  platform_linux.cc  platform_macos.cc  platform_macos.mm  platform_windows.cc  timing.cc  timing.h
rothko/scene/: BUILD.gn  camera.cc  camera.h  grid.cc  grid.h  lines.cc  lines.h  scene_graph.cc  scene_graph.h  transform.cc  transform.h
rothko/ui/: BUILD.gn  imgui.h
rothko/ui/imgui/: BUILD.gn  def.h  imgui.cc  imgui.h  imgui_renderer.cc  imgui_renderer.h  imgui_shaders.cc  imgui_shaders.h  imgui_windows.cc  imgui_windows.h  rothko_imgui_config.h
rothko/utils/: BUILD.gn  clear_on_move.h  defer.h  file.cc  file.h  intrinsics.h  location.cc  location.h  logging.cc  logging.h  macros.h  multithreading.cc  multithreading.h  strings.cc  strings.h  thread_annotations.h  types.h
rothko/widgets/: BUILD.gn  grid.cc  grid.h  lights.cc  lights.h  lines.cc  lines.h  transform.cc  transform.h  widgets.cc  widgets.h
rothko/window/: BUILD.gn  README.md  window.h
rothko/window/common/: BUILD.gn  window.cc  window.h  window_backend.cc  window_backend.h
rothko/window/sdl/: BUILD.gn  sdl_definitions.h  sdl_input.cc  sdl_input.h  sdl_opengl.cc  sdl_opengl.h
tests/: BUILD.gn  commands.cc  defer.cc  euler_angles.cc  math.cc  memory.cc  shader_parsing.cc  strings.cc  test_main.cc  vector.cc
