# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Put all the tests to be run here.
source_set("tests_lib") {
  testonly = true
  sources = [
    "defer.cc",
    "math.cc",
    "memory.cc",
    "strings.cc",
  ]

  public_deps = [
    "//third_party/catch2",
  ]

  deps = [
    "//rothko/containers",
    "//rothko/graphics/common",
    "//rothko/memory",
    "//rothko/utils",
    "//rothko/math",
  ]
}

executable("tests") {
  testonly = true
  sources = [
    "test_main.cc",
  ]
  deps = [
    ":tests_lib",
  ]
}
