# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Put all the tests to be run here.
source_set("lib") {
  testonly = true
  sources = [
    "commands.cc",
    "defer.cc",
    "euler_angles.cc",
    "math.cc",
    "memory.cc",
    "strings.cc",
  ]

  public_deps = [
    "//third_party/catch2",
  ]

  deps = [
    "//rothko/containers",
    "//rothko/logging",
    "//rothko/math",
    "//rothko/memory",
    "//rothko/utils",
  ]
}

executable("tests") {
  testonly = true
  output_name = "rothko_tests"

  sources = [
    "test_main.cc",
  ]

  deps = [
    ":lib",
  ]
}
