# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("cube") {
  sources = [
    "main.cc",
  ]

  deps = [
    "//rothko/graphics",
    "//rothko/logging",
    "//rothko/math",
    "//rothko/platform",
    "//rothko/ui:imgui",
    "//rothko/window:sdl_opengl",
  ]
}
