# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("cube") {
  sources = [
    "main.cc",
    "shader.cc",
    "shader.h",
  ]

  deps = [
    "//rothko/graphics",
    "//rothko/logging",
    "//rothko/math",
    "//rothko/platform",
    "//rothko/scene",
    "//rothko/ui:imgui",
    "//rothko/widgets",
    "//rothko/window:sdl_opengl",
    "//third_party:imguizmo",
  ]
}
