# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("lib") {
  sources = [
    "display.cc",
    "display.h",
    "memory.cc",
    "memory.h",
    "quad.cc",
    "quad.h",
    "shader.cc",
    "shader.h",
    "textures.cc",
    "textures.h",
    "cpu.cc",
    "cpu.h",
    "cpu_instructions.cc",
    "cpu_instructions.h",
  ]

  deps = [
    "//rothko:game",
    "//rothko/graphics",
    "//rothko/ui:imgui",
    "//rothko/window:sdl_opengl",
  ]
}

executable("emulator") {
  sources = [
    "main.cc",
  ]

  deps = [
    ":lib",
  ]
}

executable("tests") {
  testonly = true
  output_name = "emulator_tests"

  sources = [
    "tests.cc",
  ]

  deps = [
    ":lib",
    "//third_party/catch2",
  ]
}
