# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("lib") {
  sources = [
    "audio.cc",
    "audio.h",
    "cpu.cc",
    "cpu.h",
    "cpu_instructions.cc",
    "cpu_instructions.h",
    "cpu_operations.cc",
    "cpu_operations.h",
    "disassembler.cc",
    "disassembler.h",
    "display.cc",
    "display.h",
    "gameboy.cc",
    "gameboy.h",
    "memory.cc",
    "memory.h",
    "catridge.cc",
    "catridge.h",
    "quad.cc",
    "quad.h",
    "shader.cc",
    "shader.h",
    "textures.cc",
    "textures.h",
  ]

  deps = [
    "//rothko:game",
    "//rothko/graphics",
    "//rothko/ui:imgui",
    "//rothko/window:sdl_opengl",
    "//third_party:imgui_extras",
  ]
}

executable("emulator") {
  sources = [
    "main.cc",
  ]

  deps = [
    ":lib",
  ]
}

executable("tests") {
  testonly = true
  output_name = "emulator_tests"

  sources = [
    "tests.cc",
  ]

  deps = [
    ":lib",
    "//third_party/catch2",
  ]
}
