# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("gltf") {
  sources = [
    "loader.cc",
    "loader.h",
    "main.cc",
    "shaders.cc",
    "shaders.h",
  ]

  deps = [
    "//rothko:game",
    "//rothko/graphics/default_shaders",
    "//rothko/ui:imgui",
    "//rothko/widgets",
    "//rothko/window:sdl_opengl",
    "//third_party/tiny_gltf",
  ]
}
