# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("gltf") {
  sources = [
    "main.cc",
    "scene.cc",
    "scene.h",
    "shaders.cc",
    "shaders.h",
  ]

  deps = [
    "//rothko:game",
    "//rothko/graphics/default_shaders",
    "//rothko/memory",
    "//rothko/models/gltf",
    "//rothko/ui:imgui",
    "//rothko/widgets",
    "//rothko/window:sdl_opengl",
  ]
}
