# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("tetris") {
  sources = [
    "main.cc",
    "tetris.cc",
    "tetris.h",
  ]

  deps = [
    "//rothko:game",
    "//rothko/graphics/default_shaders",
    "//rothko/ui:imgui",
    "//rothko/widgets",
    "//rothko/window:sdl_opengl",
  ]
}
