# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# MSVC
#-------------------------------------------------------------------------------

if (compiler == "msvc") {
  config("default_warnings") {
    defines = [ "NOMINMAX" ]
    cflags = [
      "/W4",
      "/WX",

      # Warning ignores
      "/wd4267",  # size_t to int.
      "/wd4244",  # int to boolean.
      "/wd4700",  # Un-initialized variable.
      "/wd4702",  # Un-reachable code.
      "/wd4996",  # fopen.
      "/wd4201",  # Anonymouse structs within union.
    ]
  }

  config("compiler") {
    defines = [ "NOMINMAX" ]

    cflags_cc = [
      "/std:c++latest",
      "/EHsc",
      "/GR-",
    ]

    ldflags = [ "/SUBSYSTEM:CONSOLE" ]
  }

  config("debug") {
    cflags = [
      "/Od",
      "/Zi",
    ]

    ldflags = [ "/DEBUG" ]
  }

  config("release") {
    cflags = [ "/O2" ]
  }
}

# clang
#-------------------------------------------------------------------------------

if (compiler == "clang") {
  config("default_warnings") {
    cflags = [
      "-Wall",
      "-Wextra",
      "-Werror",
      "-Wno-unused-function",
      "-Wmissing-prototypes",
    ]
  }

  config("compiler") {
    cflags_cc = [ "-std=c++1z" ]
  }

  config("debug") {
    cflags = [
      "-g",
      "-O0",
    ]
  }

  config("release") {
    cflags = [ "-O2" ]
  }
}

# macOS --------------------------------------------------------------------------------------------

# These are special frameworks we need to pass on to the compiler in order for things like clipboard
# to work. Otherwise we get weird linker "underfined symbol" errors.
config("osx_compiler_config") {
  ldflags = [
    "-framework", "Foundation",
    "-framework", "AppKit",
  ]
}

