# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("memory") {
  public = [
    "block_allocator.h",
    "memory_block.h",
  ]

  sources = [
    "memory_block.cc",
    "stack_allocator.cc",
    "stack_allocator.h",
  ]

  deps = [
    "//rothko/utils",
  ]
}
