# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Platform is the a base level library, it has no dependencies.
source_set("platform") {
  public = [
    "platform.h",
  ]

  sources = [
    "platform.cc",
  ]

  # Platform specific sources ----------------------------------------------------------------------

  if (is_windows) {
    sources += [ "platform_windows.cc" ]
  } else if (is_linux) {
    sources += [ "platform_linux.cc" ]
  } else if (is_osx) {
    # NOTE(Cristian): .mm means an Objective-C/C++ hybrid file.
    #                 Gets compiled with the objcxx tool within the clang toolchain.
    #                 See gn_config/toolchains/BUILD.gn
    sources += [ "platform_macos.mm" ]
  } else {
    assert(false, "Unhandled OS: $target_os")
  }
}
