# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("scene") {
  sources = [
    "camera.cc",
    "camera.h",
    "grid.cc",
    "grid.h",
    "lines.cc",
    "lines.h",
    "scene_graph.cc",
    "scene_graph.h",
    "transform.cc",
    "transform.h",
  ]

  deps = [
    "//rothko/graphics",
    "//rothko/math",
  ]
}
