# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("utils") {
  public = [
    "clear_on_move.h",
    "file.h",
    "location.h",
    "logging.h",
    "macros.h",
    "multithreading.h",
    "strings.cc",
  ]

  sources = [
    "file.cc",
    "logging.cc",
    "multithreading.cc",
    "strings.cc",
  ]

  deps = [
    "//rothko/platform",
    "//third_party/stb",
  ]
}
