# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("widgets") {
  sources = [
    "grid.cc",
    "grig.h",
    "lights.cc",
    "lights.h",
    "lines.cc",
    "lines.h",
    "transform.cc",
    "transform.h",
    "widgets.h",
  ]

  deps = [
    "//rothko/graphics",
    "//rothko/math",
    "//rothko/models",
    "//rothko/scene",
  ]

  public_deps = [
    "//third_party:imguizmo",
  ]
}
