# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("common") {
  public = [
    "mesh.h",
    "renderer.h",
    "renderer_backend.h",
    "shader.h",
    "texture.h",
  ]

  sources = [
    "mesh.cc",
    "renderer.cc",
    "shader.cc",
    "texture.cc",
  ]

  deps = [
    "//rothko/utils",
  ]
}
