# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("common") {
  public = [
    "color.h",
    "mesh.h",
    "render_commands.h",
    "renderer.h",
    "renderer_backend.h",
    "shader.h",
    "texture.h",
  ]

  sources = [
    "mesh.cc",
    "render_commands.cc",
    "renderer.cc",
    "shader.cc",
    "texture.cc",
  ]

  deps = [
    "//rothko/utils",
  ]
}
