# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Separated for testability (don't bring in graphics dependencies).
source_set("opengl") {
  sources = [
    "mesh.cc",
    "mesh.h",
    "renderer_backend.cc",
    "renderer_backend.h",
    "shader.cc",
    "shader.h",
  ]

  deps = [
    "//rothko/graphics/common",
    "//third_party/gl3w",
    "//rothko/window/common",
  ]
}
