# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Separated for testability (don't bring in graphics dependencies).
source_set("opengl") {
  sources = [
    "execute_commands.cc",
    "execute_commands.h",
    "mesh.cc",
    "mesh.h",
    "renderer_backend.cc",
    "renderer_backend.h",
    "shader.cc",
    "shader.h",
    "texture.cc",
    "texture.h",
    "utils.cc",
    "utils.h",
  ]

  deps = [
    "//rothko/graphics/common",
    "//rothko/math",
    "//rothko/window/common",
    "//third_party/gl3w",
  ]
}
