# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("imgui") {
  public = [
    "def.h",
    "helpers.h",
    "imgui.h",
    "imgui_windows.h",
  ]

  sources = [
    "imgui.cc",
    "imgui_renderer.cc",
    "imgui_renderer.h",
    "imgui_shaders.cc",
    "imgui_shaders.h",
    "imgui_windows.cc",
  ]

  public_configs = [ ":renderer_macros" ]

  deps = [
    "//rothko/graphics:common",
    "//rothko/input",
    "//rothko/platform",
    "//rothko/utils",
    "//rothko/window/common",
  ]

  public_deps = [
    "//third_party:imgui",
  ]
}

# Adds common config to key out functionality
config("renderer_macros") {
  defines = []

  if (opengl_enabled) {
    defines += [ "ROTHKO_OPENGL_ENABLED" ]
  }

  if (vulkan_enabled) {
    defines += [ "ROTHKO_VULKAN_ENABLED" ]
  }
}
